--- a/main.css
+++ b/main.css
@@ -18,10 +18,6 @@ a {
     color: white;
 }
 
-#menu a {
-    margin: 0 5px 0 5px;
-}
-
 #content {
     background-color: lightgray;
     display: flex;
@@ -33,4 +29,21 @@ a {
     width: 150px;
     background-color: lightgreen;
     margin: 20px;
+}
+
+#menu {
+    height: 24px;
+    display: flex;
+}
+
+#menu > a {
+    align-self: center;
+    text-decoration: none;
+    color: inherit;
+    padding: 3px 6px 3px 6px;
+    opacity: 0.5;
+}
+
+#menu > a.selected {
+    opacity: 1;
 }
