--- a/launches/launches.css
+++ b/launches/launches.css
@@ -1,3 +1,17 @@
 #header {
     background-color: lightsalmon;
 }
+
+#nextLaunchTile > .contentTileCore h4 {
+    color: darkblue;
+}
+
+#nextLaunchTile > .contentTileCore {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#nextLaunchTile > .contentTileCore span {
+    margin-left: 10px;
+}
