last changes for session 12

--- a/main.css
+++ b/main.css
@@ -32,6 +32,10 @@ a {
     aspect-ratio: 5 / 3;
 }
 
+.contentTileCore h4 {
+    color: darkblue;
+}
+
 @media only screen and (min-width: 801px) {
     .contentTile {
         width: 33.3%;
@@ -49,6 +53,10 @@ a {
 }
 
 .contentTileCore {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     margin: 10px;
     background-color: lightgrey;
     width: calc(100% - 20px);
