--- a/launches/launches.css
+++ b/launches/launches.css
@@ -2,18 +2,6 @@
     background-color: lightsalmon;
 }
 
-#nextLaunchTile > .contentTileCore h4,
-#totalLaunchesTile > .contentTileCore h4 {
-    color: darkblue;
-}
-
-#nextLaunchTile > .contentTileCore,
-#totalLaunchesTile > .contentTileCore {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 #nextLaunchTile > .contentTileCore span {
     margin-left: 10px;
 }
@@ -34,6 +22,12 @@
     left: 5%;
     right: 5%;
 }
+#launchesMonthsPopup {
+    top: 20%;
+    bottom: 20%;
+    left: calc(50% - 200px);
+    right: calc(50% - 200px);
+}
 
 #totalLaunchesPopup table {
     width: 100%;
@@ -42,4 +36,12 @@
 #totalLaunchesPopup .popupContent {
     overflow-y: scroll;
     height: calc(100% - 24px);
+}
+
+#launchesMonthsTile .contentTileCore i {
+    font-size: 60px;
+}
+
+#launchesMonthsPopup .popupContent {
+    padding: 20px;
 }
