--- a/crew/crew.css
+++ b/crew/crew.css
@@ -12,4 +12,27 @@
 #crewPopup .popupContent {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    height: calc(100% - 24px);
+}
+
+.galleryItem {
+    width: 200px;
+    height: 300px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.galleryItem > img {
+    display: block;
+    width: 200px;
+    height: calc(100% - 25px);
+}
+
+.galleryItem > span {
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
