--- a/main.css
+++ b/main.css
@@ -34,6 +34,9 @@ a {
 
 .contentTileCore h4 {
     color: darkblue;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 20px 0 20px 0;
 }
 
 @media only screen and (min-width: 801px) {
@@ -64,8 +67,9 @@ a {
 }
 
 #menu {
-    height: 24px;
+    /* height: 24px; */
     display: flex;
+    padding: 10px 0 10px 0;
 }
 
 #menu > a {
