--- a/home/home.css
+++ b/home/home.css
@@ -6,3 +6,11 @@
     width: 100%;
     height: 250px;
 }
+
+#companyInfoSection .stat-name {
+    color: darkblue;
+    width: 150px;
+    display: flex;
+    flex-direction: row-reverse;
+    padding-right: 10px;
+}
